# ProteoGyver

./: .dockerignore  .gitignore  .readthedocs.yaml  Example use case.md  README.md  batch_settings_interactomics_example.toml  batch_settings_proteomics_example.toml  build_images.sh  docker-compose.yaml  docker_entrypoint.sh  dockerfile  dockerfile_pg_base  dockerfile_testing  dockerfile_updater  find_imports.ipynb  interactomics_pipeline.toml  jupyterhub.py  nm_pack.py  preparations.sh  proteomics_pipeline.toml  pyproject.toml  pytest.ini  run_batch_refactored.py  run_batch_with_export.py  run_batch_with_plots.py  run_updater.sh
.github/workflows/: ci.yml
app/: DataFunctions.py  DbEngine.py  FigureGeneration.py  __init__.py  _version.py  app.py  batch_data_store_builder.py  batch_figure_builder.py  batch_figure_builder_from_divs.py  batch_plot_generator.py  batch_to_gui_export.py  combined runlist.xlsx  data_functions.py  database_admin.py  database_generator.py  database_generator_onlytables.py  database_updater.py  element_styles.py  embed_pages.tsv  embedded_page_updater.py  figure_generation.py  generate_database.ipynb  generate_database.py  gunicorn.conf.py  index.py  iter_functions.py  killall_app.sh  layout_test.py  modify_database.ipynb  new_app.py  new_layout.py  new_parameters.json  panther_datasets.json  parameters.json  parameters.toml  parameters_toml_to_local_paths.sh  pipeline_batch.py  pipeline_from_toml.py  ram.sh  requirements.txt  (+10 more)
app/.ipynb_checkpoints/: app-checkpoint.py
app/Utilities/: cron_maintenance_jobs  reformat_tic_data.py  update_database.py
app/assets/: Combined runlist.tsv  protein lengths.tsv
app/components/: EnrichmentAdmin.py  MS_run_json_parser.py  __init__.py  cleanup_tasks.py  (+21 more)
dockerfiles/: docker-compose.yaml  docker-compose_prod_only.yaml  docker-compose_updater.yaml  docker_entrypoint.sh  docker_entrypoint_testing.sh  dockerfile  dockerfile2  dockerfile_pg_base  dockerfile_updater  updater_entrypoint.sh
docs/: conf.py  index.rst  requirements.txt
example use cases/: Interactomics example.md  Proteomics example.md  Using MS-inspector to study problems in a sample set.md  inspection of a failed sample set.md
requirements/: environment.yml  environment_minimal.yml  updater_requirements.txt
utils/: check_volume_paths.sh  database_control_set_purger.py  parse_tims_data.py  preparations.sh  req_check.sh  run_updater.sh
(+231 files in other folders)
