[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteogyver"
version = "1.5"
description = "A low-threshold, web-based platform for proteomics and interactomics data analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "LGPL-3.0"}
authors = [
    {name = "ProteoGyver Team"}
]
keywords = ["proteomics", "interactomics", "mass-spectrometry", "data-analysis", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.4.0",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash-table>=5.0.0",
    "dash-cytoscape>=0.2.0",
    "dash-uploader>=0.6.1",
    "flask>=3.1.0",
    "flask-compress>=1.18",
    "gunicorn>=23.0.0",
    "celery>=5.5.0",
    "celery-once>=3.0.1",
    "redis>=5.0.0",
    "kombu>=5.5.0",
    "amqp>=5.2.0",
    "numpy>=2.3.0",
    "scipy>=1.16.0",
    "pandas>=2.3.0",
    "numba>=0.62.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.7.0",
    "qnorm>=0.9.0",
    "matplotlib>=3.10.0",
    "plotly>=6.3.0",
    "kaleido>=0.2.1",
    "biopython>=1.85",
    "readlif>=0.6.6",
    "colour>=0.1.5",
    "dateutils>=0.6.12",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "requests>=2.32.0",
    "xmltodict>=1.0.2",
    "unidecode>=1.3.8",
    "tomlkit>=0.13.3",
    "markdown>=3.9",
    "nbib>=0.3.2",
    "supervenn>=0.5.0",
    "h5py>=3.15.0",
    "orjson>=3.11.0",
    "simplejson>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "coverage>=7.11.0",
    "ipykernel>=7.0.0",
    "ipython>=9.6.0",
    "jupyter-core>=5.9.0",
    "jupyter-client>=8.6.0",
]

[project.scripts]
proteogyver = "app.app:main"

[tool.setuptools]
packages = ["app", "utils"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
app = [
    "assets/**/*",
    "config/**/*",
    "data/**/*",
    "external/**/*",
    "resources/**/*",
]

